# PadelCourtDetector

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  base_trainer.py  base_validator.py  court_reference.py  dataset_padel.py  export_v3_onnx.py  fly.toml  homography.py  homography_padel.py  infer_padel.py  postprocess.py  postprocess_padel.py  predictor.py  prepare_padel_dataset.py  quick_detect.py  requirements.txt  run_inference.py  tracknet.py  train.py  train_padel.py  utils.py
_original_tennis/: homography.py  infer_padel_full.py
camera_keypoints_monitor/: Dockerfile  README.md  build.sh  cronjob_camera_moves.yaml  find_all_perpendicular_intersections.py  find_multiple_t_intersections.py  find_top_service_aggressive.py  find_top_service_line.py  find_top_simple.py  find_top_t_smart.py  find_top_targeted.py  morphological_line_connection.py  pyproject.toml  test_local_image.py  visualize_line_pixels.py
camera_keypoints_monitor/analysis/: compare_old_keypoints.py
camera_keypoints_monitor/src/: camera_keypoints_main.py  compute_t_intersection.py  emails.py  image_extracter.py  slack_adapter.py  supabase_adapter.py  utils.py
camera_keypoints_monitor/tests/: camera_keypoints_test.py
padel/: __init__.py  court_reference.py  train.py
padel/tools/: __init__.py  infer_homography.py  precompute_dataset_t.py
pickleball/: __init__.py  court_reference.py  dataset.py
tools/: compare_models.py  crop_bottom_t.py  export_v3_onnx.py  infer_padel.py  infer_padel_homography.py  inspect_heatmap.py  prepare_padel_dataset.py  quick_detect.py  run_inference.py
